[release] v5.8 Public Release

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -58,12 +58,15 @@ TraderInventory=1:KFMod.Magnum44Pickup
 TraderInventory=1:KFMod.Dual44MagnumPickup
 TraderInventory=1:KFMod.DeaglePickup
 TraderInventory=1:KFMod.DualDeaglePickup
+TraderInventory=1:FN45_Supressor.FN45SupressorPickup
 TraderInventory=3:KFMod.WinchesterPickup
 TraderInventory=3:KFMod.CrossbowPickup
 TraderInventory=3:KFMod.M14EBRPickup
 TraderInventory=3:KFMod.M99Pickup
 TraderInventory=3:KFMod.SPSniperPickup
 TraderInventory=3:KFEnhancedMusket.EnhancedMusketPickup
+TraderInventory=3:SVDLLImut.SVDLLIPickup
+TraderInventory=3:m21_Cod.m21_CodPickup
 TraderInventory=4:KFMod.BullpupPickup
 TraderInventory=4:KFMod.AK47Pickup
 TraderInventory=4:KFMod.MKb42Pickup
@@ -164,6 +167,7 @@ CustomCharacters=Dark.KnightCamoSkin
 CustomCharacters=VaderSkin.DarthVader
 CustomCharacters=HotRodMut.HotRod
 CustomCharacters=astonMut.aston
+CustomCharacters=DukeNukem.DukeNukem
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
