[misc] Added 3x Weapons

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -65,6 +65,7 @@ TraderInventory=3:KFMod.M14EBRPickup
 TraderInventory=3:KFMod.M99Pickup
 TraderInventory=3:KFMod.SPSniperPickup
 TraderInventory=3:KFEnhancedMusket.EnhancedMusketPickup
+TraderInventory=3:SV98.SV98Pickup
 TraderInventory=4:KFMod.BullpupPickup
 TraderInventory=4:KFMod.AK47Pickup
 TraderInventory=4:KFMod.MKb42Pickup
@@ -82,6 +83,8 @@ TraderInventory=0:KFMod.ClaymoreSwordPickup
 TraderInventory=0:KFMod.CrossbuzzsawPickup
 TraderInventory=0:KFMod.ScythePickup
 TraderInventory=0:KFMod.DwarfAxePickup
+TraderInventory=0:AxeEboniteMut.AxeEbonitePickup
+TraderInventory=0:OmniBlade.OmniBladePickup
 TraderInventory=7:KFMod.FlameThrowerPickup
 TraderInventory=2:KFMod.TrenchgunPickup
 TraderInventory=1:KFMod.FlareRevolverPickup
