--- a/System/KFAreYouVIP.ini
+++ b/System/KFAreYouVIP.ini
@@ -10,11 +10,11 @@ sGodLikeText=%w | %vGoD%w
 aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951",Color="%t",isVIP=True,sVIP="%w | %rG%oo%yD%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Cronus",steamID="76561198372730682",Color="%b",isVIP=True,sVIP="%w | %rKilleR%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Aladin_19",steamID="76561199072992334",Color="%g",isVIP=True,sVIP="%w | %rShreddeR%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
-aSpecialPlayers=(PName="MukaShino",steamID="76561198200384791",Color="%b",isVIP=True,sVIP="%w | %yBindSpammeR%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="MukaShino",steamID="76561198200384791",Color="%b",isVIP=True,sVIP="%w | %gBindSpammeR%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Dem Zii",steamID="76561198018787866",Color="%b",isVIP=True,sVIP="%w | %yAcE%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Aslan",steamID="76561197990490327",Color="%o",isVIP=True,sVIP="%w | %bBoss%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Mr. AK",steamID="76561199023028389",Color="%g",isVIP=True,sVIP="%w | %gPro%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
-aSpecialPlayers=(PName="EleNA",steamID="76561197967182915",Color="%p",isVIP=True,sVIP="%w | %yQueeN%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="EleNA",steamID="76561197967182915",Color="%p",isVIP=True,sVIP="%w | %vQueeN%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Chief",steamID="76561198881311474",Color="%w",isVIP=True,sVIP="%w | %oPoundeR%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 # You can add more colors by using the same format of the below ColorList
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
