[misc] Buffed EnhancedMusket Carry

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -26,7 +26,7 @@ bAllowAlwaysPerkChanges=False
 bEnableWebAdmin=True
 bForceCustomChars=False
 bEnableChatIcons=False
-bEnhancedShoulderView=True
+bEnhancedShoulderView=False
 bFixGrenadeExploit=True
 bAdminEditStats=True
 bUseFTPLink=False
@@ -166,6 +166,7 @@ CustomCharacters=Dark.KnightSkin
 CustomCharacters=Dark.KnightCamoSkin
 CustomCharacters=astonMut.aston
 CustomCharacters=DukeNukem.DukeNukem
+CustomCharacters=FourEyesDTSkin.FourEyesDTSkin
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
