--- a/System/KFWeaponStatConfig.ini
+++ b/System/KFWeaponStatConfig.ini
@@ -20,3 +20,4 @@ StandardWeapons[10]="FN45_Supressor.FN45Supressor;14;10;82;0;2;450;1.1;0.16;1.0;
 StandardWeapons[11]="SV98.SV98SniperRifle;10;80;200;0;8;1600;1.5;1.7;1.0;1.5;2.0"
 StandardWeapons[12]="OmniBlade.OmniBlade;1;1;120;0;5;1000;1;0.670;1.0;1;1"
 StandardWeapons[13]="AxeEboniteMut.AxeEbonite;1;1;170;0;6;2000;1;1.20;1.0;1;1"
+StandardWeapons[14]="KFEnhancedMusket.EnhancedMusket;10;20;180;0;5;1500;2;0.94;1;2.87;1"
