[release] v5.9 Public Release

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -58,14 +58,14 @@ TraderInventory=1:KFMod.Magnum44Pickup
 TraderInventory=1:KFMod.Dual44MagnumPickup
 TraderInventory=1:KFMod.DeaglePickup
 TraderInventory=1:KFMod.DualDeaglePickup
-TraderInventory=1:FN45_Supressor.FN45SupressorPickup
+TraderInventory=1:Beretta96FSDT.Beretta96FSDTPickup
 TraderInventory=3:KFMod.WinchesterPickup
 TraderInventory=3:KFMod.CrossbowPickup
 TraderInventory=3:KFMod.M14EBRPickup
 TraderInventory=3:KFMod.M99Pickup
 TraderInventory=3:KFMod.SPSniperPickup
 TraderInventory=3:KFEnhancedMusket.EnhancedMusketPickup
-TraderInventory=3:SV98.SV98Pickup
+TraderInventory=3:GaussSAMut.GaussSAPickup
 TraderInventory=4:KFMod.BullpupPickup
 TraderInventory=4:KFMod.AK47Pickup
 TraderInventory=4:KFMod.MKb42Pickup
