--- a/System/KFWeaponStatConfig.ini
+++ b/System/KFWeaponStatConfig.ini
@@ -16,8 +16,8 @@ StandardWeapons[6]="KFMod.CamoMP5MMedicGun;32;10;30;0;3;1375;1.1;0.08;1;1.5;2.7"
 StandardWeapons[7]="KFMod.KrissMMedicGun;25;10;40;0;3;2750;1.1;0.06;1;1.5;2.5"
 StandardWeapons[8]="KFMod.NeonKrissMMedicGun;25;10;40;0;3;2750;1.1;0.06;1;1.5;2.5"
 StandardWeapons[9]="KFMod.M7A3MMedicGun;15;10;70;0;6;2050;1.1;0.12;1.2;1.3;2.5"
-StandardWeapons[10]="FN45_Supressor.FN45Supressor;14;10;82;0;2;450;1.1;0.16;1.0;1.2;1.3"
-StandardWeapons[11]="SV98.SV98SniperRifle;10;80;200;0;8;1600;1.5;1.7;1.0;1.5;2.0"
+StandardWeapons[10]="Beretta96FSDT.Beretta96FSDT;15;10;82;0;2;450;1.1;0.175;1.5;1.2;1.7"
+StandardWeapons[11]="GaussSAMut.GaussSA;10;25;200;0;6;2000;2.1;1.4;1.0;1.5;2.0"
 StandardWeapons[12]="OmniBlade.OmniBlade;1;1;120;0;5;1000;1;0.670;1.0;1;1"
 StandardWeapons[13]="AxeEboniteMut.AxeEbonite;1;1;170;0;6;2000;1;1.20;1.0;1;1"
 StandardWeapons[14]="KFEnhancedMusket.EnhancedMusket;10;20;180;0;5;1500;2;0.94;1;2.87;1"
