[misc] Updated changelog with more weapons

--- a/System/KFWeaponStatConfig.ini
+++ b/System/KFWeaponStatConfig.ini
@@ -21,3 +21,7 @@ StandardWeapons[11]="GaussSAMut.GaussSA;10;25;200;0;6;2000;2.1;1.4;1.0;1.5;2.0"
 StandardWeapons[12]="OmniBlade.OmniBlade;1;1;120;0;5;1000;1;0.670;1.0;1;1"
 StandardWeapons[13]="AxeEboniteMut.AxeEbonite;1;1;170;0;6;2000;1;1.20;1.0;1;1"
 StandardWeapons[14]="KFEnhancedMusket.EnhancedMusket;10;20;180;0;5;1500;2;0.94;1;2.87;1"
+StandardWeapons[15]="M202.M202A2fw;4;100;450;100;8;3500;1.0;0.5;1;1.5;2.0"
+StandardWeapons[16]="KVoltWep.KVolt;50;15;40;0;5;1000;1.5;0.075;1;1.2;2.0"
+StandardWeapons[17]="M4A1IronBeastSAMut.M4A1IronBeastSAAssaultRifle;30;15;60;0;6;1050;2;0.109;1;1.5;2.0"
+StandardWeapons[18]="GalilComicSAMut.GalilComicSAAssaultRifle;30;15;55;0;5;950;1.0;0.109;1;1.2;2.0"
