--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -75,6 +75,9 @@ TraderInventory=4:KFMod.FNFAL_ACOG_Pickup
 TraderInventory=4:KFMod.ThompsonPickup
 TraderInventory=4:KFMod.SPThompsonPickup
 TraderInventory=4:KFMod.ThompsonDrumPickup
+TraderInventory=4:M4A1IronBeastSAMut.M4A1IronBeastSAPickup
+TraderInventory=4:KVoltWep.KVoltPickup
+TraderInventory=4:GalilComicSAMut.GalilComicSAPickup
 TraderInventory=0:KFMod.MachetePickup
 TraderInventory=0:KFMod.AxePickup
 TraderInventory=0:KFMod.ChainsawPickup
@@ -97,6 +100,7 @@ TraderInventory=6:KFMod.M32Pickup
 TraderInventory=4:KFMod.M4203Pickup
 TraderInventory=6:KFMod.SPGrenadePickup
 TraderInventory=6:KFMod.LAWPickup
+TraderInventory=6:M202.M202A2Pickup
 TraderInventory=6:KFMod.SealSquealPickup
 TraderInventory=6:KFMod.SeekerSixPickup
 TraderInventory=8:KFMod.ZEDGunPickup
