[misc] Updated MapVote Config
- [misc] Gave Elena permission for trader manipulation

--- a/System/KFServerTools.ini
+++ b/System/KFServerTools.ini
@@ -28,6 +28,7 @@ iVoteReset=50
 # Add Special players who can access the mutate commands for trader manipulation
 aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951")
 aSpecialPlayers=(PName="Cronus",steamID="76561198372730682")
+aSpecialPlayers=(PName="Elena",steamID="76561197967182915")
 # Please do not delete or modify the tags of colors below!
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
 ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
