--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -64,6 +64,7 @@ TraderInventory=3:KFMod.M14EBRPickup
 TraderInventory=3:KFMod.M99Pickup
 TraderInventory=3:KFMod.SPSniperPickup
 TraderInventory=3:KFEnhancedMusket.EnhancedMusketPickup
+TraderInventory=3:L96AWPLLImut.L96AWPLLIPickup
 TraderInventory=4:KFMod.BullpupPickup
 TraderInventory=4:KFMod.AK47Pickup
 TraderInventory=4:KFMod.MKb42Pickup
