--- a/System/KFWeaponStatConfig.ini
+++ b/System/KFWeaponStatConfig.ini
@@ -18,3 +18,4 @@ StandardWeapons[8]="KFMod.M7A3MMedicGun;15;10;70;0;6;2050;1.1;0.12;1.2;1.3;2.5"
 StandardWeapons[9]="OmniBlade.OmniBlade;1;1;120;0;5;1000;1;0.670;1.0;1;1"
 StandardWeapons[10]="KFEnhancedMusket.EnhancedMusket;10;20;180;0;5;1500;2;0.94;1;2.87;1"
 StandardWeapons[11]="M4A1IronBeastSAMut.M4A1IronBeastSAAssaultRifle;30;15;60;0;6;1050;2;0.109;1;1.5;2.0"
+StandardWeapons[12]="L96AWPLLImut.L96AWPLLI;7;30;200;0;5;2250;2.1;1.3;1.4;1.5;2.2"
