[add] 4x Female Characters

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -166,6 +166,10 @@ CustomCharacters=Dark.KnightCamoSkin
 CustomCharacters=astonMut.aston
 CustomCharacters=DukeNukem.DukeNukem
 CustomCharacters=FourEyesDTSkin.FourEyesDTSkin
+CustomCharacters=TinyTina.TinyTina
+CustomCharacters=TR3Lara.TR3Lara
+CustomCharacters=TaliZorah_H.TaliZorah
+CustomCharacters=TR3Lara.TR3Lara
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
