[fix] Zeoy Character Code

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -169,7 +169,7 @@ CustomCharacters=FourEyesDTSkin.FourEyesDTSkin
 CustomCharacters=TinyTina.TinyTina
 CustomCharacters=TR3Lara.TR3Lara
 CustomCharacters=TaliZorah_H.TaliZorah
-CustomCharacters=TR3Lara.TR3Lara
+CustomCharacters=TRSZoey
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
