[misc] Added 2 more skins

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -170,6 +170,11 @@ CustomCharacters=TinyTina.TinyTina
 CustomCharacters=TR3Lara.TR3Lara
 CustomCharacters=TaliZorah_H.TaliZorah
 CustomCharacters=TRSZoey
+CustomCharacters=Pichu.Pichu
+CustomCharacters=MitchiriNeko.MitchiriNeko_Pink
+CustomCharacters=MitchiriNeko.MitchiriNeko_LightBlue
+CustomCharacters=MitchiriNeko.MitchiriNeko_Cream
+CustomCharacters=MitchiriNeko.MitchiriNeko_Green
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
