--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -64,7 +64,6 @@ TraderInventory=3:KFMod.M14EBRPickup
 TraderInventory=3:KFMod.M99Pickup
 TraderInventory=3:KFMod.SPSniperPickup
 TraderInventory=3:KFEnhancedMusket.EnhancedMusketPickup
-TraderInventory=3:L96AWPLLImut.L96AWPLLIPickup
 TraderInventory=4:KFMod.BullpupPickup
 TraderInventory=4:KFMod.AK47Pickup
 TraderInventory=4:KFMod.MKb42Pickup
@@ -74,7 +73,6 @@ TraderInventory=4:KFMod.FNFAL_ACOG_Pickup
 TraderInventory=4:KFMod.ThompsonPickup
 TraderInventory=4:KFMod.SPThompsonPickup
 TraderInventory=4:KFMod.ThompsonDrumPickup
-TraderInventory=4:M4A1IronBeastSAMut.M4A1IronBeastSAPickup
 TraderInventory=0:KFMod.MachetePickup
 TraderInventory=0:KFMod.AxePickup
 TraderInventory=0:KFMod.ChainsawPickup
@@ -175,6 +173,19 @@ CustomCharacters=MitchiriNeko.MitchiriNeko_Pink
 CustomCharacters=MitchiriNeko.MitchiriNeko_LightBlue
 CustomCharacters=MitchiriNeko.MitchiriNeko_Cream
 CustomCharacters=MitchiriNeko.MitchiriNeko_Green
+CustomCharacters=Kasumi
+CustomCharacters=Thane
+CustomCharacters=SynthoidMut.Synthoid
+CustomCharacters=EM208rMut.EM208r
+CustomCharacters=VanquishMut.Vanquish
+CustomCharacters=NewDanteSkin.Dante
+CustomCharacters=BlackCat.Felicia
+CustomCharacters=Predator.Predator
+CustomCharacters=Legion
+CustomCharacters=AstronautMod.Astronaut
+CustomCharacters=Javik_H.Javik
+CustomCharacters=Scorpion_H.Scorpion
+CustomCharacters=KateWalker_H.KateWalker
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
