[release] v6.1 Public Release

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -52,6 +52,7 @@ TraderInventory=2:KFMod.AA12Pickup
 TraderInventory=2:KFMod.NailGunPickup
 TraderInventory=2:KFMod.SPShotGunPickup
 TraderInventory=1:KFMod.DualiesPickup
+TraderInventory=1:PBgun.PBPickup
 TraderInventory=1:KFMod.MK23Pickup
 TraderInventory=1:KFMod.DualMK23Pickup
 TraderInventory=1:KFMod.Magnum44Pickup
@@ -82,6 +83,11 @@ TraderInventory=0:KFMod.CrossbuzzsawPickup
 TraderInventory=0:KFMod.ScythePickup
 TraderInventory=0:KFMod.DwarfAxePickup
 TraderInventory=0:OmniBlade.OmniBladePickup
+TraderInventory=0:Hammer.HammerPickup
+TraderInventory=0:BaseballBat.BaseballBatPickup
+TraderInventory=0:Caius_Sword.Caius_SwordPickup
+TraderInventory=0:AxeEboniteMut.AxeEbonitePickup
+TraderInventory=0:FlyingV.FlyingVPickup
 TraderInventory=7:KFMod.FlameThrowerPickup
 TraderInventory=2:KFMod.TrenchgunPickup
 TraderInventory=1:KFMod.FlareRevolverPickup
@@ -89,6 +95,7 @@ TraderInventory=1:KFMod.DualFlareRevolverPickup
 TraderInventory=4:KFMod.MAC10Pickup
 TraderInventory=7:KFMod.HuskGunPickup
 TraderInventory=6:KFMod.PipeBombPickup
+TraderInventory=6:TripleThreatDT.TripleThreatDTPickup
 TraderInventory=6:KFMod.M79Pickup
 TraderInventory=6:KFMod.M32Pickup
 TraderInventory=4:KFMod.M4203Pickup
@@ -186,6 +193,12 @@ CustomCharacters=AstronautMod.Astronaut
 CustomCharacters=Javik_H.Javik
 CustomCharacters=Scorpion_H.Scorpion
 CustomCharacters=KateWalker_H.KateWalker
+CustomCharacters=MaxHusk
+CustomCharacters=TinaRacerDLCDTSkin.TinaRacerDLCDTSkin
+CustomCharacters=ChristieXmasDTSkin.ChristieXmasDTSkin
+CustomCharacters=VesDTSkin.VesDTSkin
+CustomCharacters=DeadEyeDTSkin.DeadEyeDTSkin
+CustomCharacters=Stealth.Stealth
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
