--- a/System/KFServerTools.ini
+++ b/System/KFServerTools.ini
@@ -4,6 +4,8 @@ bAdminAndSelectPlayers=True
 # If Set to True, you have to use the Custom ServerPerks from the workshop description
 # This will replace the 'Help' section, because who the fuck uses that section anyways?
 bServerPerksCompatibility=True
+# Increase speed of all players once trader time starts
+bApplyTraderBoost=True
 # Command to be used to skip the whole trader time of current wave
 sSkipTraderCmd=skip
 # Command to be used when you want to start a skip trader vote, instead of instantly skipping regardless of others
@@ -20,11 +22,13 @@ sReviveListCmd=dpl
 # Player Rev Code doesn't have to be 100% accurate, just put at least 3 numbers
 sReviveThem=rev
 # Default trader time
-iDefaultTraderTime=60
+iDefaultTraderTime=120
 # Cost for a single revive, if you have the Dosh, we give you the revive!
 iReviveCost=300
 # Timer on which the collected votes will reset, if the trader skip vote didn't pass
 iVoteReset=50
+# If bApplyTraderSpeed is enabled, players ground speed will be 'MULTIPLIED' with below value
+iSpeedBoost=2
 # Add Special players who can access the mutate commands for trader manipulation
 aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951")
 aSpecialPlayers=(PName="Cronus",steamID="76561198372730682")
