[release] v6.2 Public Release

--- a/System/KFAreYouVIP.ini
+++ b/System/KFAreYouVIP.ini
@@ -7,7 +7,7 @@ sGodLikeText=%w | %vGoD%w
 # Add VIP, Donator or GodLike Players here, follow the exact format | Color is for the Player Name as a whole
 # It's best to have only 2 options active at a time, or the scoreboard will act crazy with the fonts and trying to squeeze everything
 # If you enable 1 option and the text is huge, try to make the label smaller e.g. 3 letters, like VIP
-aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951",Color="%t",isVIP=True,sVIP="%w | %rG%oo%yD%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951",Color="%t",isVIP=True,sVIP="%w | %cB%ba%cr%bu%cu%bK%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Cronus",steamID="76561198372730682",Color="%b",isVIP=True,sVIP="%w | %rKilleR%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Aladin_19",steamID="76561199072992334",Color="%g",isVIP=True,sVIP="%w | %rShreddeR%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="MukaShino",steamID="76561198200384791",Color="%b",isVIP=True,sVIP="%w | %gBindSpammeR%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
@@ -21,7 +21,9 @@ ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
 ColorList=(ColorName="Yellow",ColorTag="%y",Color=(B=0,G=255,R=255,A=0))
 ColorList=(ColorName="Green",ColorTag="%g",Color=(B=0,G=200,R=0,A=0))
 ColorList=(ColorName="Blue",ColorTag="%b",Color=(B=200,G=100,R=0,A=0))
+ColorList=(ColorName="LightBlue",ColorTag="%lb",Color=(B=255,G=128,R=0,A=0))
 ColorList=(ColorName="Teal",ColorTag="%t",Color=(B=113,G=179,R=60,A=0))
+ColorList=(ColorName="Cyan",ColorTag="%c",Color=(B=255,G=255,R=0,A=0))
 ColorList=(ColorName="Violet",ColorTag="%v",Color=(B=139,G=0,R=255,A=0))
 ColorList=(ColorName="White",ColorTag="%w",Color=(B=200,G=200,R=200,A=0))
 ColorList=(ColorName="Pink",ColorTag="%p",Color=(B=180,G=105,R=255,A=0))
