[release] v6.5 Public Release

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -191,12 +191,14 @@ CustomCharacters=AstronautMod.Astronaut
 CustomCharacters=Javik_H.Javik
 CustomCharacters=Scorpion_H.Scorpion
 CustomCharacters=KateWalker_H.KateWalker
-CustomCharacters=MaxHusk
 CustomCharacters=TinaRacerDLCDTSkin.TinaRacerDLCDTSkin
 CustomCharacters=ChristieXmasDTSkin.ChristieXmasDTSkin
 CustomCharacters=VesDTSkin.VesDTSkin
 CustomCharacters=DeadEyeDTSkin.DeadEyeDTSkin
 CustomCharacters=Stealth.Stealth
+CustomCharacters=Caleb
+CustomCharacters=UndeadCaleb
+CustomCharacters=UrbanKFMod.UrbanKFSkin
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
