[release] v7.1 Public Release

--- a/System/KFEnhancedSyringe.ini
+++ b/System/KFEnhancedSyringe.ini
@@ -6,7 +6,7 @@ iBoostPower=350
 # Duration till the boost ends
 iBoostDuration=3
 # %BD is the number/placeholder of Boost Duration
-sBoostMessage=%wYou have been fucking %rboosted%w for %g%BD%w seconds! Run the %bFuck%w Away!
+sBoostMessage=%wLOW %rHP!%w Sprint Boost %gActivated%w for %o%BD%w Seconds!
 # You can add more colors by using the same format of the below ColorList
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
 ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
