--- a/System/KFMapVote.ini
+++ b/System/KFMapVote.ini
@@ -2,7 +2,7 @@
 VoteTimeLimit=70
 ScoreBoardDelay=5
 bAutoOpen=True
-MidGameVotePercent=51
+MidGameVotePercent=50
 bScoreMode=False
 bAccumulationMode=False
 bEliminationMode=False
@@ -15,12 +15,13 @@ bMapVote=True
 bKickVote=False
 bMatchSetup=False
 KickPercent=51
-bAnonymousKicking=True
+bAnonymousKicking=False
 MapListLoaderType=xVoting.DefaultMapListLoader
 ServerNumber=1
 CurrentGameConfig=3
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="HoE | 4F | 1HP",Mutators="ESWWeightMut.ESWCustomWeight,KFZedVoiceChanger.KFZedVoiceChanger,KFWhispColorChanger.KFWhispColorChanger,KFWeaponStatConfig.KFWeaponStatConfig,WeaponPickupMessage.WeaponPickupMessage,MutVisibleSpecsX.MutVisSpecs,KFShareCash.KFShareCashMut,ServerPerksMut.ServerPerksMut,KFServerTools.KFServerTools,ReloadOptionsMut.ReloadOptionsMut,RgMsgMut.RgMsgMut,MultiplePatHPBarMut.MultiplePatHPBarMut,MedicAlert.MedicAlert,KFStreakSoundMut.StreakSoundMut,MutKillMessage.MutKillMessage,KFARGChat.KFARGChat,FPSpinMut.FPSpinMut,KFAutoCallOut.KFAutoCallOut,KFHardPatF.KFHardPatF,KFEnhancedScoreboard.KFEnhancedScoreboard,KFEnhancedSyringe.KFEnhancedSyringe,KFDamagePopup.mutDamagePopup,CountryTags.CountryTags,KFColorfulHUD.KFColorfulHUD,CleanAppIDMut.CleanAppIDMut,KFAreYouVIP.KFAreYouVIP",Options="Difficulty=7")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="Suicidal | 4F | 1HP",Mutators="ESWWeightMut.ESWCustomWeight,KFZedVoiceChanger.KFZedVoiceChanger,KFWhispColorChanger.KFWhispColorChanger,KFWeaponStatConfig.KFWeaponStatConfig,WeaponPickupMessage.WeaponPickupMessage,MutVisibleSpecsX.MutVisSpecs,KFShareCash.KFShareCashMut,ServerPerksMut.ServerPerksMut,KFServerTools.KFServerTools,ReloadOptionsMut.ReloadOptionsMut,RgMsgMut.RgMsgMut,MultiplePatHPBarMut.MultiplePatHPBarMut,MedicAlert.MedicAlert,KFStreakSoundMut.StreakSoundMut,MutKillMessage.MutKillMessage,KFARGChat.KFARGChat,FPSpinMut.FPSpinMut,KFAutoCallOut.KFAutoCallOut,KFHardPatF.KFHardPatF,KFEnhancedScoreboard.KFEnhancedScoreboard,KFEnhancedSyringe.KFEnhancedSyringe,KFDamagePopup.mutDamagePopup,CountryTags.CountryTags,KFColorfulHUD.KFColorfulHUD,CleanAppIDMut.CleanAppIDMut,KFAreYouVIP.KFAreYouVIP",Options="Difficulty=5")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="Hard | 4F | 1HP",Mutators="ESWWeightMut.ESWCustomWeight,KFZedVoiceChanger.KFZedVoiceChanger,KFWhispColorChanger.KFWhispColorChanger,KFWeaponStatConfig.KFWeaponStatConfig,WeaponPickupMessage.WeaponPickupMessage,MutVisibleSpecsX.MutVisSpecs,KFShareCash.KFShareCashMut,ServerPerksMut.ServerPerksMut,KFServerTools.KFServerTools,ReloadOptionsMut.ReloadOptionsMut,MultiplePatHPBarMut.MultiplePatHPBarMut,MedicAlert.MedicAlert,KFStreakSoundMut.StreakSoundMut,MutKillMessage.MutKillMessage,KFARGChat.KFARGChat,FPSpinMut.FPSpinMut,KFAutoCallOut.KFAutoCallOut,KFHardPatF.KFHardPatF,KFEnhancedScoreboard.KFEnhancedScoreboard,KFEnhancedSyringe.KFEnhancedSyringe,KFDamagePopup.mutDamagePopup,CountryTags.CountryTags,KFColorfulHUD.KFColorfulHUD,CleanAppIDMut.CleanAppIDMut,KFAreYouVIP.KFAreYouVIP",Options="Difficulty=4")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="Ultra | 4F | 1HP",Mutators="ESWWeightMut.ESWCustomWeight,KFZedVoiceChanger.KFZedVoiceChanger,KFWhispColorChanger.KFWhispColorChanger,KFWeaponStatConfig.KFWeaponStatConfig,MutVisibleSpecsX.MutVisSpecs,KFShareCash.KFShareCashMut,SetPlayerLoadout.SetPlayerLoadout,ServerPerksMut.ServerPerksMut,KFServerTools.KFServerTools,ReloadOptionsMut.ReloadOptionsMut,RgMsgMut.RgMsgMut,KFNFN.KFNFN,MultiplePatHPBarMut.MultiplePatHPBarMut,MedicAlert.MedicAlert,KFStreakSoundMut.StreakSoundMut,MutKillMessage.MutKillMessage,KFARGChat.KFARGChat,FPSpinMut.FPSpinMut,KFAutoCallOut.KFAutoCallOut,KFHardPatF.KFHardPatF,KFEnhancedScoreboard.KFEnhancedScoreboard,KFEnhancedSyringe.KFEnhancedSyringe,KFDamagePopup.mutDamagePopup,CountryTags.CountryTags,KFColorfulHUD.KFColorfulHUD,CleanAppIDMut.CleanAppIDMut,KFAreYouVIP.KFAreYouVIP",Options="Difficulty=7")
-
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard | 3F | 1HP",Mutators="MutLoader.MutLoader",Options="Difficulty=4")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal | 3F | 1HP",Mutators="MutLoader.MutLoader",Options="Difficulty=5")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE | 3F | 1HP",Mutators="MutLoader.MutLoader",Options="Difficulty=7")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="0. NFN-Hard | 3F | 1HP",Mutators="MutLoader.MutLoader",Options="Difficulty=4")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="1. NFN-Suicidal | 3F | 1HP",Mutators="MutLoader.MutLoader",Options="Difficulty=5")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="2. NFN-HoE | 3F | 1HP",Mutators="MutLoader.MutLoader",Options="Difficulty=7")
