--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -35,6 +35,7 @@ Mutator=PatriarchScoreboard.PatriarchScoreboard
 Mutator=ZedKillCount.ZedKillCount
 Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
+Mutator=AlarmTrader.AlarmTrader
 
 [Settings2 MutLoaderObject]
 GameTypeName=KFGameType
@@ -70,6 +71,7 @@ Mutator=PatriarchScoreboard.PatriarchScoreboard
 Mutator=ZedKillCount.ZedKillCount
 Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
+Mutator=AlarmTrader.AlarmTrader
 
 [Settings3 MutLoaderObject]
 GameTypeName=KFGameType
@@ -105,6 +107,7 @@ Mutator=PatriarchScoreboard.PatriarchScoreboard
 Mutator=ZedKillCount.ZedKillCount
 Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
+Mutator=AlarmTrader.AlarmTrader
 
 [Settings4 MutLoaderObject]
 GameTypeName=NFNGameType
@@ -141,6 +144,7 @@ Mutator=PatriarchScoreboard.PatriarchScoreboard
 Mutator=ZedKillCount.ZedKillCount
 Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
+Mutator=AlarmTrader.AlarmTrader
 
 [Settings5 MutLoaderObject]
 GameTypeName=NFNGameType
@@ -177,6 +181,7 @@ Mutator=PatriarchScoreboard.PatriarchScoreboard
 Mutator=ZedKillCount.ZedKillCount
 Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
+Mutator=AlarmTrader.AlarmTrader
 
 [Settings6 MutLoaderObject]
 GameTypeName=NFNGameType
@@ -213,3 +218,4 @@ Mutator=PatriarchScoreboard.PatriarchScoreboard
 Mutator=ZedKillCount.ZedKillCount
 Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
+Mutator=AlarmTrader.AlarmTrader
