[misc] Added Soundboard Mut

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -36,6 +36,7 @@ Mutator=ZedKillCount.ZedKillCount
 Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
+Mutator=KFSoundBoard.KFSoundBoard
 
 [Settings2 MutLoaderObject]
 GameTypeName=KFGameType
@@ -72,6 +73,7 @@ Mutator=ZedKillCount.ZedKillCount
 Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
+Mutator=KFSoundBoard.KFSoundBoard
 
 [Settings3 MutLoaderObject]
 GameTypeName=KFGameType
@@ -108,6 +110,7 @@ Mutator=ZedKillCount.ZedKillCount
 Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
+Mutator=KFSoundBoard.KFSoundBoard
 
 [Settings4 MutLoaderObject]
 GameTypeName=NFNGameType
@@ -145,6 +148,7 @@ Mutator=ZedKillCount.ZedKillCount
 Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
+Mutator=KFSoundBoard.KFSoundBoard
 
 [Settings5 MutLoaderObject]
 GameTypeName=NFNGameType
@@ -182,6 +186,7 @@ Mutator=ZedKillCount.ZedKillCount
 Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
+Mutator=KFSoundBoard.KFSoundBoard
 
 [Settings6 MutLoaderObject]
 GameTypeName=NFNGameType
@@ -219,3 +224,4 @@ Mutator=ZedKillCount.ZedKillCount
 Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
+Mutator=KFSoundBoard.KFSoundBoard
