[misc] Updated some configs

--- a/System/ServerAdsKF.ini
+++ b/System/ServerAdsKF.ini
@@ -1,6 +1,6 @@
 [ServerAdsKF.ServerAdsKF]
 bEnabled=True
-fDelay=180.000000
+fDelay=60.000000
 sLines[0]=%rServer Hosted by Vel-San, Contact on Steam for Support
 sLines[1]=%bServer IP: %g217.182.197.134 %w| Fav. the server for easier access!
 sLines[2]=%oWant to be %bViP %w? join the %bSteam Group: %w/groups/%gNanu-Nanu %w& be a constant player on the server!
@@ -8,11 +8,11 @@ sLines[3]=%oNo Cheating, Griefing or BMing! This will result in a perma-ban (IP 
 sLines[4]=%oAlways Stay Grouped!
 sLines[5]=%oServer Has Custom Maps
 sLines[6]=%oServer Has Difficulty Votes
-sLines[7]=%oPlayer Outfits in the %g'Misc'%w section of the trader shop
-sLines[8]=%oAll DLC Weapons Unlocked
-sLines[9]=%rServer is NOT White-listed!
-sLines[10]=# SHARE THE NANU NANU KNOWLEDGE, LET OTHERS COME AND SLAY ZEDS
-sLines[11]=
+sLines[7]=%oPlayer Outfits in the %g'Misc'%o section of the trader shop
+sLines[8]=%oType %g'mutate sb help'%o in your console to get SoundBoard help
+sLines[9]=%oAll DLC Weapons Unlocked
+sLines[10]=%rServer is NOT White-listed!
+sLines[11]=# SHARE THE NANU NANU KNOWLEDGE, LET OTHERS COME AND SLAY ZEDS
 sLines[12]=
 sLines[13]=
 sLines[14]=
@@ -43,3 +43,4 @@ ColorList=(ColorName="Green",ColorTag="%g",Color=(B=0,G=200,R=0,A=0))
 ColorList=(ColorName="Blue",ColorTag="%b",Color=(B=200,G=100,R=0,A=0))
 ColorList=(ColorName="Violet",ColorTag="%v",Color=(B=139,G=0,R=255,A=0))
 ColorList=(ColorName="White",ColorTag="%w",Color=(B=200,G=200,R=200,A=0))
+
