[misc] Added 9x Sounds to SoundBoard

--- a/System/SoundBoardConfig.ini
+++ b/System/SoundBoardConfig.ini
@@ -33,6 +33,15 @@ SoundList=(Sound="SoundBoardSND.SMITE.OperaBacchus_CryForMe",SoundTag="Bacchus-C
 SoundList=(Sound="SoundBoardSND.SMITE.RagnarokFenrir_Pathetic",SoundTag="Fenrir-Pathetic",SoundBind="Pathetic")
 SoundList=(Sound="SoundBoardSND.SMITE.RagnarokFenrir_Silence",SoundTag="Fenrir-Silence",SoundBind="Silence")
 SoundList=(Sound="SoundBoardSND.SMITE.Thanatos_Laugh",SoundTag="Thana-Laugh",SoundBind="Laugh3")
+SoundList=(Sound="SoundBoardSND.Cronus.Bra",SoundTag="Bra",SoundBind="Bra")
+SoundList=(Sound="SoundBoardSND.Cronus.Bra1",SoundTag="Bra1",SoundBind="Bra1")
+SoundList=(Sound="SoundBoardSND.Cronus.Chingadasos",SoundTag="Chingadasos",SoundBind="Chingadasos")
+SoundList=(Sound="SoundBoardSND.Cronus.Enemy",SoundTag="Enemy",SoundBind="ENM")
+SoundList=(Sound="SoundBoardSND.Cronus.Enemy1",SoundTag="Enemy1",SoundBind="ENM1")
+SoundList=(Sound="SoundBoardSND.Cronus.Excelent",SoundTag="Excellent",SoundBind="Excellent")
+SoundList=(Sound="SoundBoardSND.Cronus.FkBitch",SoundTag="FkBitch",SoundBind="FKB")
+SoundList=(Sound="SoundBoardSND.Cronus.FkBitch1",SoundTag="FkBitch1",SoundBind="FKB1")
+SoundList=(Sound="SoundBoardSND.Cronus.Gay",SoundTag="Gay",SoundBind="Gay")
 # Color Tags for messages | Do not change :)
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
 ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
