--- a/System/ServerAdsKF.ini
+++ b/System/ServerAdsKF.ini
@@ -9,11 +9,11 @@ sLines[4]=%oAlways Stay Grouped!
 sLines[5]=%oServer Has Custom Maps
 sLines[6]=%oServer Has Difficulty Votes
 sLines[7]=%oPlayer Outfits in the %g'Misc'%o section of the trader shop
-sLines[8]=%oType %g'mutate sb help'%o in your console to get SoundBoard help
-sLines[9]=%oAll DLC Weapons Unlocked
-sLines[10]=%rServer is NOT White-listed!
-sLines[11]=# SHARE THE NANU NANU KNOWLEDGE, LET OTHERS COME AND SLAY ZEDS
-sLines[12]=
+sLines[8]=%oType %g'mutate sb help'%w in your console to get %gSoundBoard%w help
+sLines[9]=%oType %g'mutate st help'%w in your console to get %gServerTools%w help
+sLines[10]=%oAll DLC Weapons Unlocked
+sLines[11]=%rServer is NOT White-listed!
+sLines[12]=# SHARE THE NANU NANU KNOWLEDGE, LET THE CULT GROW!
 sLines[13]=
 sLines[14]=
 sLines[15]=
