[add] AllTraders Mut

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -37,6 +37,7 @@ Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=KFSoundBoard.KFSoundBoard
+Mutator=AllTradersMut.AllTradersMut
 
 [Settings2 MutLoaderObject]
 GameTypeName=KFGameType
@@ -74,6 +75,7 @@ Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=KFSoundBoard.KFSoundBoard
+Mutator=AllTradersMut.AllTradersMut
 
 [Settings3 MutLoaderObject]
 GameTypeName=KFGameType
@@ -111,6 +113,7 @@ Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=KFSoundBoard.KFSoundBoard
+Mutator=AllTradersMut.AllTradersMut
 
 [Settings4 MutLoaderObject]
 GameTypeName=NFNGameType
@@ -149,6 +152,7 @@ Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=KFSoundBoard.KFSoundBoard
+Mutator=AllTradersMut.AllTradersMut
 
 [Settings5 MutLoaderObject]
 GameTypeName=NFNGameType
@@ -187,6 +191,7 @@ Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=KFSoundBoard.KFSoundBoard
+Mutator=AllTradersMut.AllTradersMut
 
 [Settings6 MutLoaderObject]
 GameTypeName=NFNGameType
@@ -225,3 +230,4 @@ Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=KFSoundBoard.KFSoundBoard
+Mutator=AllTradersMut.AllTradersMut
