[misc] Updated ServerTools Mut

--- a/System/KFServerTools.ini
+++ b/System/KFServerTools.ini
@@ -15,18 +15,18 @@ sCurrentTraderTimeCmd=tt
 # Command to be used to change default trader time for whole match
 sCustomTraderTimeCmd=ct
 # Command to be used for self revive
-sReviveMe=revme
+sReviveMeCmd=revme
 # Command to show list of all dead players, along with their rev codes
 sReviveListCmd=dpl
 # Command to revive other players. Usage: mutate rev all, or mutate rev <Rev Code>
 # Player Rev Code doesn't have to be 100% accurate, just put at least 3 numbers
-sReviveThem=rev
+sReviveThemCmd=rev
 # Default trader time
 iDefaultTraderTime=120
 # Cost for a single revive, if you have the Dosh, we give you the revive!
 iReviveCost=300
 # Timer on which the collected votes will reset, if the trader skip vote didn't pass
-iVoteReset=50
+iVoteReset=30
 # If bApplyTraderSpeed is enabled, players ground speed will be 'MULTIPLIED' with below value
 iSpeedBoost=2
 # Add Special players who can access the mutate commands for trader manipulation
