[release] v7.3 Public Release

--- a/System/KFAreYouVIP.ini
+++ b/System/KFAreYouVIP.ini
@@ -7,14 +7,13 @@ sGodLikeText=%w | %vGoD%w
 # Add VIP, Donator or GodLike Players here, follow the exact format | Color is for the Player Name as a whole
 # It's best to have only 2 options active at a time, or the scoreboard will act crazy with the fonts and trying to squeeze everything
 # If you enable 1 option and the text is huge, try to make the label smaller e.g. 3 letters, like VIP
-aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951",Color="%t",isVIP=True,sVIP="%w | %rG%oo%yD%w |",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
-aSpecialPlayers=(PName="Cronus",steamID="76561198372730682",Color="%b",isVIP=True,sVIP="%w | %rKilleR%w |",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
-aSpecialPlayers=(PName="Aladin_19",steamID="76561199072992334",Color="%g",isVIP=True,sVIP="%w | %rShreddeR%w |",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
-aSpecialPlayers=(PName="MukaShino",steamID="76561198200384791",Color="%b",isVIP=True,sVIP="%w | %gBindSpammeR%w |",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
-aSpecialPlayers=(PName="Dem Zii",steamID="76561198018787866",Color="%b",isVIP=True,sVIP="%w | %yAcE%w |",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
-aSpecialPlayers=(PName="Aslan",steamID="76561197990490327",Color="%o",isVIP=True,sVIP="%w | %bBoss%w |",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
-aSpecialPlayers=(PName="Mr. AK",steamID="76561199023028389",Color="%g",isVIP=True,sVIP="%w | %gPro%w |",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
-aSpecialPlayers=(PName="EleNA",steamID="76561197967182915",Color="%p",isVIP=True,sVIP="%w | %vQueeN%w |",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951",Color="%t",isVIP=True,sVIP="%w | %rG%oo%yD%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Cronus",steamID="76561198372730682",Color="%b",isVIP=True,sVIP="%w | %rKilleR%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Aladin_19",steamID="76561199072992334",Color="%g",isVIP=True,sVIP="%w | %rShreddeR%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="MukaShino",steamID="76561198200384791",Color="%b",isVIP=True,sVIP="%w | %gBindSpammeR%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Dem Zii",steamID="76561198018787866",Color="%b",isVIP=True,sVIP="%w | %yAcE%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Mr. AK",steamID="76561199023028389",Color="%g",isVIP=True,sVIP="%w | Pro%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="EleNA",steamID="76561197967182915",Color="%p",isVIP=True,sVIP="%w | %vQueeN%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 # You can add more colors by using the same format of the below ColorList
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
 ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
