--- a/System/KFWeaponStatConfig.ini
+++ b/System/KFWeaponStatConfig.ini
@@ -1,18 +1,34 @@
 [KFWeaponStatConfig.KFWeaponStatConfig]
-DEBUG=True
-# Always keep the same order when adding or editing values !!!
-# ClassName; Mag; AmmoCost; DmgMax; ImpactDamage; Weight; Cost; HeadShot Multi; FireRate; FireRate Anim; ReloadRate; ReloadRate Anime
+bDebug=False
 # FireAnime & ReloadAnime: + To Increase | Low or High Values might break the Animations or make it slow-mo, increase/decrease gradually
-# FireRate & ReloadRate: - To Increase | Low or High Values might break firerate or make it slow-mo, increase/decrease gradually
-# MagCapacity, ReloadRate & ReloadAnimRate are ignored for MeleeWeapons
+# FireRate & ReloadRate: - To Increase | Low or High Values might break fFireRate or make it slow-mo, increase/decrease gradually
+# Set fSpread=999 if you 'DO NOT' want to Modify this value
+# Set iProjPerFire=0 if you 'DO NOT' want to Modify this value
+# MagCapacity, ProjPerFire, Spread, ReloadRate & ReloadAnimRate are ignored for MeleeWeapons
 # ImpactDamage is only for weapons with Impact such as Rocket Laucnhers (e.g. Demo Weapons)
-StandardWeapons[0]="KFMod.M99SniperRifle;1.0;100;675;0.0;10;2750;2.25;3.03;1.0;2.6;2.0"
-StandardWeapons[1]="KFMod.M32GrenadeLauncher;6;60;350;200;7;3250;1.1;0.33;1.0;1.0;1.8"
-StandardWeapons[2]="KFMod.CamoM32GrenadeLauncher;6;60;350;200;7;3250;1.1;0.33;1.0;1.0;1.8"
-StandardWeapons[3]="MGP.MGP;1;100;0;100;5;1500;0;3.333;1.0;1.0;1"
-StandardWeapons[4]="KFMod.MP5MMedicGun;32;10;30;0;3;1375;1.1;0.08;1;1.5;2.7"
-StandardWeapons[5]="KFMod.CamoMP5MMedicGun;32;10;30;0;3;1375;1.1;0.08;1;1.5;2.7"
-StandardWeapons[6]="KFMod.KrissMMedicGun;25;10;40;0;3;2750;1.1;0.06;1;1.5;2.5"
-StandardWeapons[7]="KFMod.NeonKrissMMedicGun;25;10;40;0;3;2750;1.1;0.06;1;1.5;2.5"
-StandardWeapons[8]="KFMod.M7A3MMedicGun;15;10;70;0;6;2050;1.1;0.12;1.2;1.3;2.5"
-StandardWeapons[9]="KFEnhancedMusket.EnhancedMusket;10;20;180;0;5;1500;2;0.94;1;2.87;1"
+# This list will 'Edit' the weapon stats
+aWeapon[0]=(sWeaponClassName="KFMod.M99SniperRifle",iInventoryGroup=4,iWeight=10,iCost=2750,iDamageMax=675,iMagCapacity=1,iAmmoCost=100,iImpactDamage=0,iProjPerFire=1,fHeadShotDamageMult=2.25,fSpread=0,fFireRate=3.03,fFireAnimRate=1.0,fReloadRate=2.6,fReloadAnimRate=2.0)
+aWeapon[1]=(sWeaponClassName="KFMod.M32GrenadeLauncher",iInventoryGroup=4,iWeight=7,iCost=3250,iDamageMax=350,iMagCapacity=6,iAmmoCost=60,iImpactDamage=200,iProjPerFire=1,fHeadShotDamageMult=1.1,fSpread=0.01,fFireRate=0.33,fFireAnimRate=1.0,fReloadRate=1.0,fReloadAnimRate=1.8)
+aWeapon[2]=(sWeaponClassName="KFMod.CamoM32GrenadeLauncher",iInventoryGroup=4,iWeight=7,iCost=3250,iDamageMax=350,iMagCapacity=6,iAmmoCost=60,iImpactDamage=200,iProjPerFire=1,fHeadShotDamageMult=1.1,fSpread=0.01,fFireRate=0.33,fFireAnimRate=1.0,fReloadRate=1.0,fReloadAnimRate=1.8)
+aWeapon[3]=(sWeaponClassName="MGP.MGP",iInventoryGroup=4,iWeight=5,iCost=1500,iDamageMax=0,iMagCapacity=1,iAmmoCost=100,iImpactDamage=100,iProjPerFire=1,fHeadShotDamageMult=1,fSpread=0.01,fFireRate=1.5,fFireAnimRate=1.0,fReloadRate=1,fReloadAnimRate=1.5)
+aWeapon[4]=(sWeaponClassName="KFMod.MP5MMedicGun",iInventoryGroup=3,iWeight=3,iCost=1375,iDamageMax=30,iMagCapacity=32,iAmmoCost=10,iImpactDamage=0,iProjPerFire=0,fHeadShotDamageMult=1.1,fSpread=0.01,fFireRate=0.08,fFireAnimRate=1.0,fReloadRate=1.5,fReloadAnimRate=2.7)
+aWeapon[5]=(sWeaponClassName="KFMod.CamoMP5MMedicGun",iInventoryGroup=3,iWeight=3,iCost=1375,iDamageMax=30,iMagCapacity=32,iAmmoCost=10,iImpactDamage=0,iProjPerFire=0,fHeadShotDamageMult=1.1,fSpread=0.01,fFireRate=0.08,fFireAnimRate=1.0,fReloadRate=1.5,fReloadAnimRate=2.7)
+aWeapon[6]=(sWeaponClassName="KFMod.KrissMMedicGun",iInventoryGroup=3,iWeight=3,iCost=2750,iDamageMax=40,iMagCapacity=30,iAmmoCost=10,iImpactDamage=0,iProjPerFire=0,fHeadShotDamageMult=1.1,fSpread=0.01,fFireRate=0.06,fFireAnimRate=1.0,fReloadRate=1.5,fReloadAnimRate=2.6)
+aWeapon[7]=(sWeaponClassName="KFMod.NeonKrissMMedicGun",iInventoryGroup=3,iWeight=3,iCost=2750,iDamageMax=40,iMagCapacity=30,iAmmoCost=10,iImpactDamage=0,iProjPerFire=0,fHeadShotDamageMult=1.1,fSpread=0.01,fFireRate=0.06,fFireAnimRate=1.0,fReloadRate=1.5,fReloadAnimRate=2.6)
+aWeapon[8]=(sWeaponClassName="KFMod.M7A3MMedicGun",iInventoryGroup=3,iWeight=5,iCost=2050,iDamageMax=70,iMagCapacity=20,iAmmoCost=10,iImpactDamage=0,iProjPerFire=0,fHeadShotDamageMult=1.5,fSpread=0.01,fFireRate=0.12,fFireAnimRate=1.2,fReloadRate=1.3,fReloadAnimRate=2.5)
+aWeapon[9]=(sWeaponClassName="KFEnhancedMusket.EnhancedMusket",iInventoryGroup=4,iWeight=5,iCost=1500,iDamageMax=180,iMagCapacity=10,iAmmoCost=20,iImpactDamage=0,iProjPerFire=0,fHeadShotDamageMult=2,fSpread=0,fFireRate=0.94,fFireAnimRate=1.0,fReloadRate=2.87,fReloadAnimRate=1)
+
+
+[KFWeaponStatConfig.Helper]
+# This list is to 'Print' default stats for a weapon
+# If bDebug=True --> Stats will be printed in your server.log (or Killingfloor.log)
+PrintStatsFor="KFMod.M99SniperRifle"
+PrintStatsFor="KFMod.M32GrenadeLauncher"
+PrintStatsFor="KFMod.CamoM32GrenadeLauncher"
+PrintStatsFor="MGP.MGP"
+PrintStatsFor="KFMod.MP5MMedicGun"
+PrintStatsFor="KFMod.CamoMP5MMedicGun"
+PrintStatsFor="KFMod.KrissMMedicGun"
+PrintStatsFor="KFMod.NeonKrissMMedicGun"
+PrintStatsFor="KFMod.M7A3MMedicGun"
+PrintStatsFor="KFEnhancedMusket.EnhancedMusket"
