[release] v7.5 Public Release

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -1,10 +1,9 @@
 [MutLoaderV2.MutLoader]
-bDebug=True
 
 [Settings1 MutLoaderObject]
 GameTypeName=KFGameType
 GameDifficulty=4.0
-ServerName=NANU NANU CULT | [EU] | HARD | 2F | 1HP
+ServerName=NANU NANU CULT | [EU] | HARD
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=KFServerTools.KFServerTools
 Mutator=KFAutoCallOut.KFAutoCallOut
@@ -33,7 +32,6 @@ Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
 Mutator=PatriarchScoreboard.PatriarchScoreboard
 Mutator=ZedKillCount.ZedKillCount
-Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=KFSoundBoard.KFSoundBoard
@@ -42,7 +40,7 @@ Mutator=AllTradersMut.AllTradersMut
 [Settings2 MutLoaderObject]
 GameTypeName=KFGameType
 GameDifficulty=5.0
-ServerName=NANU NANU CULT | [EU] | SUICIDAL | 2F | 1HP
+ServerName=NANU NANU CULT | [EU] | SUICIDAL
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=KFServerTools.KFServerTools
 Mutator=KFAutoCallOut.KFAutoCallOut
@@ -71,7 +69,6 @@ Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
 Mutator=PatriarchScoreboard.PatriarchScoreboard
 Mutator=ZedKillCount.ZedKillCount
-Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=KFSoundBoard.KFSoundBoard
@@ -80,7 +77,7 @@ Mutator=AllTradersMut.AllTradersMut
 [Settings3 MutLoaderObject]
 GameTypeName=KFGameType
 GameDifficulty=7.0
-ServerName=NANU NANU CULT | [EU] | HELL ON EARTH | 2F | 1HP
+ServerName=NANU NANU CULT | [EU] | HELL ON EARTH
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=KFServerTools.KFServerTools
 Mutator=KFAutoCallOut.KFAutoCallOut
@@ -109,7 +106,6 @@ Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
 Mutator=PatriarchScoreboard.PatriarchScoreboard
 Mutator=ZedKillCount.ZedKillCount
-Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=KFSoundBoard.KFSoundBoard
@@ -118,7 +114,7 @@ Mutator=AllTradersMut.AllTradersMut
 [Settings4 MutLoaderObject]
 GameTypeName=NFNGameType
 GameDifficulty=4.0
-ServerName=NANU NANU CULT | [EU] | NFN-HARD | 2F | 1HP
+ServerName=NANU NANU CULT | [EU] | NFN-HARD
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=KFServerTools.KFServerTools
 Mutator=KFAutoCallOut.KFAutoCallOut
@@ -148,7 +144,6 @@ Mutator=WeaponPickupMessage.WeaponPickupMessage
 Mutator=KFNFN.KFNFN
 Mutator=PatriarchScoreboard.PatriarchScoreboard
 Mutator=ZedKillCount.ZedKillCount
-Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=KFSoundBoard.KFSoundBoard
@@ -157,7 +152,7 @@ Mutator=AllTradersMut.AllTradersMut
 [Settings5 MutLoaderObject]
 GameTypeName=NFNGameType
 GameDifficulty=5.0
-ServerName=NANU NANU CULT | [EU] | NFN-SUICIDAL | 2F | 1HP
+ServerName=NANU NANU CULT | [EU] | NFN-SUICIDAL
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=KFServerTools.KFServerTools
 Mutator=KFAutoCallOut.KFAutoCallOut
@@ -187,7 +182,6 @@ Mutator=WeaponPickupMessage.WeaponPickupMessage
 Mutator=KFNFN.KFNFN
 Mutator=PatriarchScoreboard.PatriarchScoreboard
 Mutator=ZedKillCount.ZedKillCount
-Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=KFSoundBoard.KFSoundBoard
@@ -196,7 +190,7 @@ Mutator=AllTradersMut.AllTradersMut
 [Settings6 MutLoaderObject]
 GameTypeName=NFNGameType
 GameDifficulty=7.0
-ServerName=NANU NANU CULT | [EU] | NFN-HELL ON EARTH | 2F | 1HP
+ServerName=NANU NANU CULT | [EU] | NFN-HELL ON EARTH
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=KFServerTools.KFServerTools
 Mutator=KFAutoCallOut.KFAutoCallOut
@@ -226,7 +220,6 @@ Mutator=WeaponPickupMessage.WeaponPickupMessage
 Mutator=KFNFN.KFNFN
 Mutator=PatriarchScoreboard.PatriarchScoreboard
 Mutator=ZedKillCount.ZedKillCount
-Mutator=FakedPlus.Custom
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=KFSoundBoard.KFSoundBoard
