--- a/System/FakedPlus.ini
+++ b/System/FakedPlus.ini
@@ -1,8 +1,41 @@
-# Custom Mode
-[FakedPlus.Custom]
+[FakedPlus.Faked_1]
+nConfigFakes=1
+nReservedSlots=6
+bNoDrama=False
+bSoloMode=False
+minNumPlayers=1
+
+[FakedPlus.Faked_2]
 nConfigFakes=2
 nReservedSlots=6
 bNoDrama=False
-bAdminOnly=True
+bSoloMode=False
+minNumPlayers=1
+
+[FakedPlus.Faked_3]
+nConfigFakes=3
+nReservedSlots=6
+bNoDrama=False
+bSoloMode=False
+minNumPlayers=1
+
+[FakedPlus.Faked_4]
+nConfigFakes=4
+nReservedSlots=6
+bNoDrama=False
+bSoloMode=False
+minNumPlayers=1
+
+[FakedPlus.Faked_5]
+nConfigFakes=5
+nReservedSlots=6
+bNoDrama=False
+bSoloMode=False
+minNumPlayers=1
+
+[FakedPlus.Custom]
+nConfigFakes=6
+nReservedSlots=6
+bNoDrama=False
 bSoloMode=False
 minNumPlayers=1
