[balance] Balance Phase 2 - Support

--- a/System/KFWeaponStatConfig.ini
+++ b/System/KFWeaponStatConfig.ini
@@ -17,18 +17,39 @@ aWeapon[6]=(sWeaponClassName="KFMod.KrissMMedicGun",iInventoryGroup=3,iWeight=3,
 aWeapon[7]=(sWeaponClassName="KFMod.NeonKrissMMedicGun",iInventoryGroup=3,iWeight=3,iCost=2750,iDamageMax=40,iMagCapacity=30,iAmmoCost=10,iImpactDamage=0,iProjPerFire=0,fHeadShotDamageMult=1.1,fSpread=0.01,fFireRate=0.06,fFireAnimRate=1.0,fReloadRate=1.5,fReloadAnimRate=2.6)
 aWeapon[8]=(sWeaponClassName="KFMod.M7A3MMedicGun",iInventoryGroup=3,iWeight=5,iCost=2050,iDamageMax=70,iMagCapacity=20,iAmmoCost=10,iImpactDamage=0,iProjPerFire=0,fHeadShotDamageMult=1.5,fSpread=0.01,fFireRate=0.12,fFireAnimRate=1.2,fReloadRate=1.3,fReloadAnimRate=2.5)
 aWeapon[9]=(sWeaponClassName="KFEnhancedMusket.EnhancedMusket",iInventoryGroup=4,iWeight=5,iCost=1500,iDamageMax=180,iMagCapacity=10,iAmmoCost=20,iImpactDamage=0,iProjPerFire=0,fHeadShotDamageMult=2,fSpread=0,fFireRate=0.94,fFireAnimRate=1.0,fReloadRate=2.87,fReloadAnimRate=1)
-
+aWeapon[10]=(sWeaponClassName="KFMod.SPAutoShotgun",iInventoryGroup=4,iWeight=8,iCost=1800,iDamageMax=25,iMagCapacity=10,iAmmoCost=30,iImpactDamage=0,iProjPerFire=7,fHeadShotDamageMult=1.5,fSpread=1500.00,fFireRate=0.35,fFireAnimRate=1.00,fReloadRate=3.30,fReloadAnimRate=1.00)
+aWeapon[11]=(sWeaponClassName="KFMod.NailGun",iInventoryGroup=3,iWeight=8,iCost=2250,iDamageMax=40,iMagCapacity=6,iAmmoCost=30,iImpactDamage=0,iProjPerFire=7,fHeadShotDamageMult=1.5,fSpread=2500.00,fFireRate=0.50,fFireAnimRate=1.00,fReloadRate=2.60,fReloadAnimRate=1.00)
+aWeapon[12]=(sWeaponClassName="KFMod.BenelliShotgun",iInventoryGroup=3,iWeight=8,iCost=2000,iDamageMax=30,iMagCapacity=8,iAmmoCost=20,iImpactDamage=0,iProjPerFire=7,fHeadShotDamageMult=1.5,fSpread=1125.00,fFireRate=0.20,fFireAnimRate=1.00,fReloadRate=0.90,fReloadAnimRate=1.00)
+aWeapon[13]=(sWeaponClassName="KFMod.GoldenBenelliShotgun",iInventoryGroup=3,iWeight=8,iCost=2000,iDamageMax=30,iMagCapacity=8,iAmmoCost=20,iImpactDamage=0,iProjPerFire=7,fHeadShotDamageMult=1.5,fSpread=1125.00,fFireRate=0.20,fFireAnimRate=1.00,fReloadRate=0.90,fReloadAnimRate=1.00)
+aWeapon[14]=(sWeaponClassName="KFMod.KSGShotgun",iInventoryGroup=3,iWeight=8,iCost=1750,iDamageMax=25,iMagCapacity=10,iAmmoCost=30,iImpactDamage=0,iProjPerFire=12,fHeadShotDamageMult=1.5,fSpread=1000.00,fFireRate=0.82,fFireAnimRate=1.00,fReloadRate=3.16,fReloadAnimRate=1.00)
+aWeapon[15]=(sWeaponClassName="KFMod.NeonKSGShotgun",iInventoryGroup=3,iWeight=8,iCost=1750,iDamageMax=25,iMagCapacity=10,iAmmoCost=30,iImpactDamage=0,iProjPerFire=12,fHeadShotDamageMult=1.5,fSpread=1000.00,fFireRate=0.82,fFireAnimRate=1.00,fReloadRate=3.16,fReloadAnimRate=1.00)
+aWeapon[16]=(sWeaponClassName="KFMod.Shotgun",iInventoryGroup=3,iWeight=6,iCost=500,iDamageMax=35,iMagCapacity=8,iAmmoCost=20,iImpactDamage=0,iProjPerFire=7,fHeadShotDamageMult=1.5,fSpread=1125.00,fFireRate=0.96,fFireAnimRate=0.95,fReloadRate=0.67,fReloadAnimRate=1.00)
+aWeapon[17]=(sWeaponClassName="KFMod.CamoShotgun",iInventoryGroup=3,iWeight=6,iCost=500,iDamageMax=35,iMagCapacity=8,iAmmoCost=20,iImpactDamage=0,iProjPerFire=7,fHeadShotDamageMult=1.5,fSpread=1125.00,fFireRate=0.96,fFireAnimRate=0.95,fReloadRate=0.67,fReloadAnimRate=1.00)
+aWeapon[18]=(sWeaponClassName="KFMod.AA12AutoShotgun",iInventoryGroup=4,iWeight=10,iCost=3500,iDamageMax=30,iMagCapacity=20,iAmmoCost=40,iImpactDamage=0,iProjPerFire=5,fHeadShotDamageMult=1.5,fSpread=1125.00,fFireRate=0.20,fFireAnimRate=1.00,fReloadRate=3.13,fReloadAnimRate=1.00)
+aWeapon[19]=(sWeaponClassName="KFMod.GoldenAA12AutoShotgun",iInventoryGroup=4,iWeight=10,iCost=3500,iDamageMax=30,iMagCapacity=20,iAmmoCost=40,iImpactDamage=0,iProjPerFire=5,fHeadShotDamageMult=1.5,fSpread=1125.00,fFireRate=0.20,fFireAnimRate=1.00,fReloadRate=3.13,fReloadAnimRate=1.00)
+aWeapon[20]=(sWeaponClassName="KFMod.BoomStick",iInventoryGroup=4,iWeight=8,iCost=750,iDamageMax=50,iMagCapacity=2,iAmmoCost=15,iImpactDamage=0,iProjPerFire=10,fHeadShotDamageMult=1.5,fSpread=3000.00,fFireRate=0.25,fFireAnimRate=1.00,fReloadRate=0.01,fReloadAnimRate=0.90)
 
 [KFWeaponStatConfig.Helper]
 # This list is to 'Print' default stats for a weapon
 # If bDebug=True --> Stats will be printed in your server.log (or Killingfloor.log)
-PrintStatsFor="KFMod.M99SniperRifle"
-PrintStatsFor="KFMod.M32GrenadeLauncher"
-PrintStatsFor="KFMod.CamoM32GrenadeLauncher"
-PrintStatsFor="MGP.MGP"
-PrintStatsFor="KFMod.MP5MMedicGun"
-PrintStatsFor="KFMod.CamoMP5MMedicGun"
-PrintStatsFor="KFMod.KrissMMedicGun"
-PrintStatsFor="KFMod.NeonKrissMMedicGun"
-PrintStatsFor="KFMod.M7A3MMedicGun"
-PrintStatsFor="KFEnhancedMusket.EnhancedMusket"
+; PrintStatsFor="KFMod.M99SniperRifle"
+; PrintStatsFor="KFMod.M32GrenadeLauncher"
+; PrintStatsFor="KFMod.CamoM32GrenadeLauncher"
+; PrintStatsFor="MGP.MGP"
+; PrintStatsFor="KFMod.MP5MMedicGun"
+; PrintStatsFor="KFMod.CamoMP5MMedicGun"
+; PrintStatsFor="KFMod.KrissMMedicGun"
+; PrintStatsFor="KFMod.NeonKrissMMedicGun"
+; PrintStatsFor="KFMod.M7A3MMedicGun"
+; PrintStatsFor="KFEnhancedMusket.EnhancedMusket"
+; PrintStatsFor="KFMod.SPAutoShotgun"
+; PrintStatsFor="KFMod.NailGun"
+; PrintStatsFor="KFMod.BenelliShotgun"
+; PrintStatsFor="KFMod.GoldenBenelliShotgun"
+; PrintStatsFor="KFMod.KSGShotgun"
+; PrintStatsFor="KFMod.NeonKSGShotgun"
+; PrintStatsFor="KFMod.Shotgun"
+; PrintStatsFor="KFMod.CamoShotgun"
+; PrintStatsFor="KFMod.AA12AutoShotgun"
+; PrintStatsFor="KFMod.GoldenAA12AutoShotgun"
+; PrintStatsFor="KFMod.BoomStick"
