--- a/System/KFMapVote.ini
+++ b/System/KFMapVote.ini
@@ -18,40 +18,30 @@ KickPercent=51
 bAnonymousKicking=False
 MapListLoaderType=xVoting.DefaultMapListLoader
 ServerNumber=1
-CurrentGameConfig=3
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard | 1F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=4")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard | 2F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=4")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard | 3F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=4")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard | 4F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_4",Options="Difficulty=4")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard | 5F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_5",Options="Difficulty=4")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard | 6F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Custom",Options="Difficulty=4")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal | 1F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=5")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal | 2F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=5")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal | 3F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=5")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal | 4F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_4",Options="Difficulty=5")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal | 5F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_5",Options="Difficulty=5")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal | 6F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Custom",Options="Difficulty=5")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE | 1F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=7")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE | 2F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=7")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE | 3F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=7")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE | 4F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_4",Options="Difficulty=7")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE | 5F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_5",Options="Difficulty=7")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE | 6F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Custom",Options="Difficulty=7")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard | 1F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=4")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard | 2F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=4")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard | 3F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=4")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard | 4F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_4",Options="Difficulty=4")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard | 5F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_5",Options="Difficulty=4")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard | 6F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Custom",Options="Difficulty=4")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal | 1F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=5")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal | 2F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=5")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal | 3F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=5")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal | 4F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_4",Options="Difficulty=5")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal | 5F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_5",Options="Difficulty=5")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal | 6F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Custom",Options="Difficulty=5")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE | 1F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=7")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE | 2F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=7")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE | 3F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=7")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE | 4F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_4",Options="Difficulty=7")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE | 5F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Faked_5",Options="Difficulty=7")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE | 6F | 1HP",Mutators="MutLoader.MutLoader,FakedPlus.Custom",Options="Difficulty=7")
+CurrentGameConfig=0
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard",Mutators="MutLoader.MutLoader",Options="Difficulty=4")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=4")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=4")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=4")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal",Mutators="MutLoader.MutLoader",Options="Difficulty=5")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=5")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=5")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=5")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE",Mutators="MutLoader.MutLoader",Options="Difficulty=7")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=7")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=7")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=7")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard",Mutators="MutLoader.MutLoader",Options="Difficulty=4")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=4")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=4")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=4")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal",Mutators="MutLoader.MutLoader",Options="Difficulty=5")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=5")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=5")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=5")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE",Mutators="MutLoader.MutLoader",Options="Difficulty=7")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=7")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=7")
+GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=7")
+
+
