--- a/System/PlayerLoadout.ini
+++ b/System/PlayerLoadout.ini
@@ -3,9 +3,9 @@ AmmoStart=True
 StartingArmor=100
 StartingHealth=100
 StartingCash=5000
-Weapons=(Perk="SRVetSharpshooter",WeaponsToDelete=("KFMod.Crossbow"),WeaponsToAdd=("KFMod.MK23Pistol","KFMod.GoldenDeagle","KFEnhancedMusket.EnhancedMusket","KFMod.M14EBRBattleRifle","KFMod.Winchester"))
+Weapons=(Perk="SRVetSharpshooter",WeaponsToDelete=("KFMod.Crossbow"),WeaponsToAdd=("KFMod.MK23Pistol","KFMod.GoldenDeagle","KFMod.SPSniperRifle","KFMod.M14EBRBattleRifle","KFMod.Winchester"))
 Weapons=(Perk="SRVetSupportSpec",WeaponsToDelete=(),WeaponsToAdd=("KFMod.GoldenDeagle","KFMod.GoldenKatana","KFMod.GoldenAA12AutoShotgun"))
 Weapons=(Perk="SRVetDemolitions",WeaponsToDelete=("KFMod.M79GrenadeLauncher"),WeaponsToAdd=("KFMod.NeonKrissMMedicGun","KFMod.LAW","KFMod.CamoM32GrenadeLauncher"))
 Weapons=(Perk="SRVetFieldMedic",WeaponsToDelete=("KFMod.MP7MMedicGun"),WeaponsToAdd=("KFMod.MK23Pistol","KFMod.GoldenKatana","KFMod.MP5MMedicGun","KFMod.NeonKrissMMedicGun"))
 Weapons=(Perk="SRVetCommando",WeaponsToDelete=("KFMod.AK47AssaultRifle"),WeaponsToAdd=("KFMod.PipeBombExplosive","KFMod.NeonSCARMK17AssaultRifle","KFMod.FNFAL_ACOG_AssaultRifle","KFMod.GoldenAK47AssaultRifle","KFMod.CamoM32GrenadeLauncher"))
-Weapons=(Perk="SRVetBerserker",WeaponsToDelete=("KFMod.Axe"),WeaponsToAdd=("KFMod.MK23Pistol","KFMod.GoldenDeagle","KFMod.DwarfAxe","KFMod.GoldenKatana","KFEnhancedMusket.EnhancedMusket","KFMod.Crossbuzzsaw"))
+Weapons=(Perk="SRVetBerserker",WeaponsToDelete=("KFMod.Axe"),WeaponsToAdd=("KFMod.MK23Pistol","KFMod.GoldenDeagle","KFMod.DwarfAxe","KFMod.GoldenKatana","KFMod.SPSniperRifle","KFMod.Crossbuzzsaw"))
