--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -7,6 +7,7 @@ ServerName=NANU NANU CULT | [EU] | HARD
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=KFSoundBoard.KFSoundBoard
 Mutator=KFServerTools.KFServerTools
+Mutator=FakedPlus.Faked_1
 Mutator=KFAutoCallOut.KFAutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
@@ -44,6 +45,7 @@ ServerName=NANU NANU CULT | [EU] | SUICIDAL
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=KFSoundBoard.KFSoundBoard
 Mutator=KFServerTools.KFServerTools
+Mutator=FakedPlus.Faked_1
 Mutator=KFAutoCallOut.KFAutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
@@ -81,6 +83,7 @@ ServerName=NANU NANU CULT | [EU] | HELL ON EARTH
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=KFSoundBoard.KFSoundBoard
 Mutator=KFServerTools.KFServerTools
+Mutator=FakedPlus.Faked_1
 Mutator=KFAutoCallOut.KFAutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
@@ -118,6 +121,7 @@ ServerName=NANU NANU CULT | [EU] | NFN-HARD
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=KFSoundBoard.KFSoundBoard
 Mutator=KFServerTools.KFServerTools
+Mutator=FakedPlus.Faked_1
 Mutator=KFAutoCallOut.KFAutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
@@ -156,6 +160,7 @@ ServerName=NANU NANU CULT | [EU] | NFN-SUICIDAL
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=KFSoundBoard.KFSoundBoard
 Mutator=KFServerTools.KFServerTools
+Mutator=FakedPlus.Faked_1
 Mutator=KFAutoCallOut.KFAutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
@@ -194,6 +199,7 @@ ServerName=NANU NANU CULT | [EU] | NFN-HELL ON EARTH
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=KFSoundBoard.KFSoundBoard
 Mutator=KFServerTools.KFServerTools
+Mutator=FakedPlus.Faked_1
 Mutator=KFAutoCallOut.KFAutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
