Misc: All sounds disabled except FPs & SCs

--- a/System/KFZedVoiceChanger.ini
+++ b/System/KFZedVoiceChanger.ini
@@ -1,11 +1,11 @@
 [KFZedVoiceChanger.KFZedVoiceChanger]
-bSiren=True
+bSiren=False
 bScrake=True
 bFleshP=True
-bPatty=True
-bBloat=True
+bPatty=False
+bBloat=False
 bClot=False
-bCrawler=True
+bCrawler=False
 bGib=False
 bDecap=False
 bDEBUG=False
